<resources>
    <string name="app_name">FlexPay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_flexpay_logout">logout</string>
    <string name="nav_header_user_name">First Last Name</string>
    <string name="nav_header_user_email">user email address</string>
    <string name="content_discription">It contains an image in Splash Screen</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Sign Out</string>
    <string name="app_name_wallet">Wallet</string>
    <string name="app_name_booking">Booking</string>
    <string name="app_name_deals">Deals</string>
    <string name="app_name_goals">Goals</string>
    <string name="app_name_profile">Profile</string>
    <string name="app_name_withdraw">Withdraw</string>
    <string name="app_name_add_goals">Add Goal</string>
    <string name="activity_account_management_create_account">CREATE ACOUNT</string>
    <string name="activity_account_management_log_in">Log In</string>
    <string name="activity_add_goal_home_text">Home</string>
    <string name="activity_add_goal_goal_text"><![CDATA[>Goals>]]></string>
    <string name="activity_add_goal_text">Add Goal</string>
    <string name="activity_add_goal_arrow_text"><![CDATA[>Goals>]]></string>
    <string name="activity_add_goal_name_text">Goal Name</string>
    <string name="activity_add_goal_trip_london_text">Trip to London</string>
    <string name="activity_add_goal_expected_date_text">Expected Start Date</string>
    <string name="activity_add_goal_overdue_dates_text">Overdue Goals</string>
    <string name="activity_add_goal_date1_text">01/01/2018</string>
    <string name="activity_add_goal_date2_text">12/03/2018</string>
    <string name="activity_add_goal_description_text">Description</string>
    <string name="activity_add_goal_enter_description_text">Enter Description</string>
    <string name="activity_add_goal_a_goal_text">Add a goal</string>
    <string name="activity_booking_home_text">Home</string>
    <string name="activity_booking_booking_arrow_text"><![CDATA[ > Booking]]></string>
    <string name="activity_booking_active_booking_text">Active Bookings</string>
    <string name="activity_booking_successful_booking_tex">Successful Bookings</string>
    <string name="activity_booking_successful_booking_text">Successful Bookings</string>
    <string name="activity_booking_overdue_booking_text">Overdue Goals</string>
    <string name="activity_booking_active_booking1_text">10</string>
    <string name="activity_booking_successful_booking1_text">10</string>
    <string name="activity_booking_overdue_booking1_text">5</string>
    <string name="activity_booking_active_booking1_text1">KES 120,000</string>
    <string name="activity_booking_successful_booking_text1">KES 150,000</string>
    <string name="activity_booking_overdue_booking_text1">KES 10,000</string>
    <string name="activity_booking_overdue_history_text1">Bookings History</string>
    <string name="activity_booking_overdue_status_text">Status</string>
    <string name="activity_booking_show_text">Show</string>
    <string name="activity_booking_filter_booking_text">Filter by Date</string>
    <string name="activity_booking_to_date_text">To Date</string>
    <string name="activity_booking_to_date_text2_text">To Date</string>
    <string name="activity_deals_option_choose">Choose</string>
    <string name="activity_deals_retal_deal_choose">Retail Deals</string>
    <string name="activity_goals_home">Home</string>
    <string name="activity_goals_arrow_goals"><![CDATA[>Goals]]></string>
    <string name="activity_goals_active_goals">Active Goals</string>
    <string name="activity_goals_successful_goals">Successful Goals</string>
    <string name="activity_goals_overdue_goals">Overdue Goals</string>
    <string name="activity_goals_add_a_goal">Add a goal</string>
    <string name="activity_goals_goals_history">Goals History</string>
    <string name="activity_goals_status">Status</string>
    <string name="activity_goals_show">Show</string>
    <string name="activity_goals_filter_by_date">Filter by Date</string>
    <string name="activity_goals_to_date">To Date</string>
    <string name="activity_goals_to_date2">To Date</string>
    <string name="activity_login_welcome_to_flexPay">Welcome to FlexPay</string>
    <string name="activity_login_login_signup_to">Login /Signup to</string>
    <string name="activity_login_get_started">get started</string>
    <string name="activity_login_hint_Password">Password</string>
    <string name="activity_login_Remember_Me">Remember Me</string>
    <string name="activity_login_forget_password">Forget Password</string>
    <string name="activity_login_log_in">Log In</string>
    <string name="activity_login_not_a_member_register">Not A Member? Register</string>
    <string name="activity_main_welcome_to_flexPay">Welcome to FlexPay</string>
    <string name="activity_main_login_signup_to">Login /Signup to</string>
    <string name="activity_main_get_started">get started</string>
    <string name="activity_main_hot_deals">Hot Deals</string>
    <string name="activity_main_all_deals">All Deals</string>
    <string name="activity_main_new_blazing_hot_deals_you_cant_miss">New blazing hot deals you can’t miss</string>
    <string name="activity_main_browse_deals_by_industry_or_category">Browse Deals by Industry or category</string>
    <string name="activity_sign_up_lets_start_here">Lets Start Here</string>
    <string name="activity_sign_up_phone_number">Phone Number</string>
    <string name="activity_sign_up_email">Email</string>
    <string name="activity_sign_up_username">Username</string>
    <string name="activity_sign_up_first_name">First Name</string>
    <string name="activity_sign_up_last_name">Last Name</string>
    <string name="activity_sign_up_password">Password</string>
    <string name="activity_sign_up_confirm">Confirm</string>
    <string name="activity_sign_up_register">Register</string>
    <string name="activity_sign_up_by_signing_up_you_agree_to_our_terms_and_privacy_policy">By signing up you agree to our terms and privacy policy</string>
    <string name="activity_splash_screen_lipia_pole_pole">Lipia Pole Pole</string>
    <string name="activity_wallet_home">Home</string>
    <string name="activity_wallet_arrow_wallet"><![CDATA[> Wallet]]></string>
    <string name="activity_wallet_wallet_balance">Wallet Balance</string>
    <string name="activity_wallet_available_balance">Available Balance</string>
    <string name="activity_wallet_total_transactions">Total Transactions</string>
    <string name="activity_wallet_request_for_loan_advance">Request for loan/ Advance</string>
    <string name="activity_wallet_home_text">Home</string>
    <string name="activity_withdraw_arrow_withdraw">Wallet</string>
    <string name="activity_withdraw_home_text">Home ></string>
    <string name="activity_withdraw_arrow_withdraw_withdraw2"><![CDATA[> Withdraw]]></string>
    <string name="activity_withdraw_wallet_balance">Wallet Balance</string>
    <string name="activity_withdraw_available_balance">Available Balance</string>
    <string name="activity_withdraw_Easily_withdraw_directly_to_Mobile">Easily withdraw directly to Mobile</string>
    <string name="activity_withdraw_money_or_bank_account">Money or Bank account</string>
    <string name="activity_withdraw_next">Next</string>
    <string name="activity_withdraw_hint_phone_number">Phone Number</string>
    <string name="activity_withdraw_leave_as_is_to_send_to_your_phone_number">Leave as is to send to your phone number</string>
    <string name="activity_withdraw_enter_receipients_phone_number">Enter Receipients phone number</string>
    <string name="activity_content_dashboard_seems_like_you_have_no_products_or_goals_setup_yet">Seems like you have no products or goals setup yet</string>
    <string name="activity_content_dashboard_get_started">Get Started</string>
    <string name="activity_content_dashboard_achieve_more_by_setting_goals">Achieve more by setting goals</string>
    <string name="activity_content_dashboard_bookings_history">Bookings History</string>
    <string name="activity_content_dashboard_setup_goals">Setup Goals</string>
    <string name="activity_content_dashboard_view_deals">View Deals</string>
    <string name="activity_product_list_product_name">Product Name</string>
    <string name="activity_product_list_product_attribute">Product Attribute</string>
    <string name="activity_withdraw_to_mpesa">Withdraw To Mpesa</string>
    <string name="activity_wallet_arrow_wallet1">Wallet</string>
    <string name="activity_deals_arrow_deals">Deals</string>
    <string name="activity_goals_from_date">From Date</string>
    <string name="activity_deals_toolbar">Deals</string>
    <string name="username_required">Username Required</string>
    <string name="enter_valid_phone_number">Enter Valid Phone Number 2547***</string>
    <string name="minimum_of_6">Minimum of 6</string>
    <string name="enter_valid_email_address">Enter Valid Email</string>
    <string name="both_passwords_should_match">Both passwords should match</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter your username</string>
</resources>
