<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.AddGoalActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/add_goals_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:id="@+id/activity_add_goal_home_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_add_goal_home_text"
            android:textColor="@color/blue_lagoon"
            android:textStyle="bold"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/activity_add_goal_arrow_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_lagoon"
            android:text="@string/activity_add_goal_arrow_text"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/activity_add_goal_add_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_add_goal_text"
            android:textSize="18sp"/>

    </LinearLayout>
    <View
        android:id="@+id/activity_add_goal_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/activity_add_goal_goal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_add_goal_name_text"
            android:textColor="@color/silver"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal" >
        <EditText
            android:id="@+id/activity_add_goal_add_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_add_goal_trip_london_text"
            android:textColorHint="@color/blue_lagoon"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="0dp"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/activity_add_goal_overdue_goals_value1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/activity_add_goal_expected_date_text"
            android:textColor="@color/silver"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/activity_add_goal_overdue_goals_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.5"
            android:text="@string/activity_add_goal_overdue_dates_text"
            android:textColor="@color/silver"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="0dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">
        <EditText
            android:id="@+id/in_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="right"
            android:textColorHint="@color/blue_lagoon"
            android:inputType="datetime"
            android:padding="15dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/in_date2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.5"
            android:drawablePadding="10dp"
            android:textColorHint="@color/blue_lagoon"
            android:inputType="date"
            android:padding="15dp"
            android:textSize="14sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/activity_add_goal_ActiveGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_add_goal_description_text"
            android:textColor="@color/silver"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal" >
        <EditText
            android:id="@+id/activity_add_goal_field_active_goals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_add_goal_enter_description_text"
            android:textColorHint="@color/blue_lagoon"
            android:textSize="17sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61.52dp"
        android:paddingTop="20dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/activity_add_goal_btn_add_goal"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:textSize="18sp"
            android:text="@string/activity_add_goal_a_goal_text"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"
            android:shadowColor="@android:color/transparent"
            android:textColor="@color/pure_white"
            android:drawableRight="@drawable/ic_add_black_24dp"
            android:background="@drawable/shapegoal"/>
    </LinearLayout>
</LinearLayout>